test/error/binary.ss
3 + "hello"
# -> type error
